# jxr_to_png

./: CMakeLists.txt  LICENSE-THIRD-PARTY  README.md  icc_profile.h  main.c  main.cpp
lib/: libpng.lib  zlibstatic.lib
